--- a/package.json
+++ b/package.json
@@ -1,18 +1,41 @@
 {
   "name": "restyle",
+  "author": {
+    "name": "Joonas Yliaho",
+    "email": "joonas.yliaho@gmail.com"
+  },
   "version": "0.1.0",
   "license": "MIT",
   "bin": {
-    "restyle": "./bin/restyle.js"
+    "restyle": "./bin/restyle"
   },
   "scripts": {
-    "watch": "sass --sourcemap=none --watch src:dist --style compressed",
-    "publish": "node bin/restyle.js publish"
+    "watch": "rollup -cw",
+    "publish": "NODE_ENV=production node bin/restyle publish",
+    "test": "NODE_ENV=development node_modules/.bin/mocha"
   },
   "dependencies": {
     "chalk": "^2.3.0",
     "commander": "^2.13.0",
     "dotenv": "^4.0.0",
-    "snoowrap": "^1.15.2"
+    "node-sass": "^4.7.2",
+    "rollup-plugin-async": "^1.2.0",
+    "snoowrap": "^1.15.2",
+    "typescript": "^2.6.2"
+  },
+  "devDependencies": {
+    "@types/node": "^9.4.0",
+    "@types/node-sass": "^3.10.32",
+    "@types/snoowrap": "^1.14.3",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "rollup": "^0.55.1",
+    "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-string": "^2.0.2",
+    "rollup-plugin-typescript": "^0.8.1",
+    "rollup-watch": "^4.3.1"
   }
 }
