fixed type errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "es5",
     "diagnostics": true,
-    "lib": ["es5", "es6", "es2015.generator", "es2015.promise"],
-    "noEmitOnError": false,
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "noUnusedParameters": false,
-    "noUnusedLocals": true,
-    "skipLibCheck": true
+    "lib": ["es5", "es6", "es2016", "es2015.generator", "es2015.promise"]
   },
   "include": ["test/**/*.spec.ts", "src", "bin"],
   "exclude": ["dist", "node_modules"]
