--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "type": "git",
     "url": "https://github.com/yliaho/restyle-for-reddit"
   },
-  "keywords": ["reddit", "stylesheet", "scss", "css", "moderator"],
+  "keywords": [
+    "reddit",
+    "stylesheet",
+    "scss",
+    "css",
+    "moderator"
+  ],
   "scripts": {
     "watch": "rollup -cw",
     "start": "NODE_ENV=production node bin/restyle publish",
